--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,7 @@ LabVeilleTech - Eloi
 </head>
 <body class="dark:bg-gray-800 dark:text-white relative flex flex-col min-h-screen"><header class="container flex justify-between md:justify-between gap-4 flex-wrap p-6 mx-auto relative">
 <a href=https://eloicoquoz.github.io/labveilletech/en/ class="capitalize font-extrabold text-2xl">
-<img src=blist-logo.png alt="LabVeilleTech - Eloi" class="h-8 max-w-full">
+<img src=/labveilletech/blist-logo.png alt="LabVeilleTech - Eloi" class="h-8 max-w-full">
 </a>
 <button class="mobile-menu-button md:hidden"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="4" y1="8" x2="20" y2="8"/><line x1="4" y1="16" x2="20" y2="16"/></svg>
 </button>
@@ -55,7 +55,7 @@ LabVeilleTech - Eloi
 <h1 class="text-4xl font-bold mb-4">Hey! I'm Katheryn Fox</h1>
 <p class="font-light text-lg">26 y/o junior developer who enjoys social card games, blogging and painting</p>
 </div>
-<img class="rounded-lg shadow-sm" src=picture.jpg alt="LabVeilleTech - Eloi">
+<img class="rounded-lg shadow-sm" src=/labveilletech/picture.jpg alt="LabVeilleTech - Eloi">
 </div>
 </section>
 <div class="container p-6 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-8">
