--- a/fr/index.html
+++ b/fr/index.html
@@ -21,7 +21,7 @@ LabVeilleTech - Eloi
 </head>
 <body class="dark:bg-gray-800 dark:text-white relative flex flex-col min-h-screen"><header class="container flex justify-between md:justify-between gap-4 flex-wrap p-6 mx-auto relative">
 <a href=https://eloicoquoz.github.io/labveilletech/fr/ class="capitalize font-extrabold text-2xl">
-<img src=/blist-logo.png alt="LabVeilleTech - Eloi" class="h-8 max-w-full">
+<img src=/labveilletech/blist-logo.png alt="LabVeilleTech - Eloi" class="h-8 max-w-full">
 </a>
 <button class="mobile-menu-button md:hidden"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><line x1="4" y1="8" x2="20" y2="8"/><line x1="4" y1="16" x2="20" y2="16"/></svg>
 </button>
@@ -54,7 +54,7 @@ LabVeilleTech - Eloi
 <h1 class="text-4xl font-bold mb-4">Salut! Je suis Eloi Coquoz</h1>
 <p class="font-light text-lg">Développeuse junior de 26 ans qui adore les jeux de société, le blogging et la peinture</p>
 </div>
-<img class="rounded-lg shadow-sm" src=/picture.jpg alt="LabVeilleTech - Eloi">
+<img class="rounded-lg shadow-sm" src=/labveilletech/picture.jpg alt="LabVeilleTech - Eloi">
 </div>
 </section>
 <div class="container p-6 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-8">
@@ -69,8 +69,6 @@ LabVeilleTech - Eloi
 <div class="my-2 text-xl font-semibold">Digital Fan</div>
 <div>Le digital au service de l’expérience des fans</div>
 </a>
-<div style=font-style:italic;font-size:smaller>Autres langues: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/digital-fan/ lang=en>English</a>
-</div>
 </div>
 </div>
 <div class="bg-blue-100 dark:bg-gray-900">
