deploy: 5a8a89c76fe6cb56d601f6b27460e760fb602118

--- a/de/index.html
+++ b/de/index.html
@@ -69,6 +69,8 @@ Blist (mehrsprachig)
 <div class="my-2 text-xl font-semibold">Emoji-Unterstützung</div>
 <div>Anleitung zur Verwendung von Emojis in Hugo</div>
 </a>
+<div style=font-style:italic;font-size:smaller>Andere Sprachen: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/emoji-support/ lang=en>English</a>
+</div>
 </div>
 <div class=p-2>
 <a href=https://eloicoquoz.github.io/labveilletech/de/blog/markdown-syntax/>
@@ -81,6 +83,8 @@ Blist (mehrsprachig)
 <div class="my-2 text-xl font-semibold">Markdown Syntax Guide</div>
 <div>Beispielartikel, der die grundlegende Markdown-Syntax und Formatierung für HTML-Elemente zeigt.</div>
 </a>
+<div style=font-style:italic;font-size:smaller>Andere Sprachen: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/markdown-syntax/ lang=en>English</a>
+</div>
 </div>
 <div class=p-2>
 <a href=https://eloicoquoz.github.io/labveilletech/de/blog/rich-content/>
@@ -93,6 +97,8 @@ Blist (mehrsprachig)
 <div class="my-2 text-xl font-semibold">Reichhaltiger Inhalt</div>
 <div>Eine kurze Beschreibung von Hugo Shortcodes</div>
 </a>
+<div style=font-style:italic;font-size:smaller>Andere Sprachen: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/rich-content/ lang=en>English</a>
+</div>
 </div>
 <div class=p-2>
 <a href=https://eloicoquoz.github.io/labveilletech/de/blog/placeholder-text/>
@@ -105,6 +111,8 @@ Blist (mehrsprachig)
 <div class="my-2 text-xl font-semibold">Platzhaltertext</div>
 <div>Lorem Ipsum Dolor Si Amet DE</div>
 </a>
+<div style=font-style:italic;font-size:smaller>Andere Sprachen: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/placeholder-text/ lang=en>English</a>
+</div>
 </div>
 </div>
 <div class="bg-blue-100 dark:bg-gray-900">
