--- a/fr/index.html
+++ b/fr/index.html
@@ -69,6 +69,8 @@ LabVeilleTech - Eloi
 <div class="my-2 text-xl font-semibold">Digital Fan</div>
 <div>Le digital au service de l’expérience des fans</div>
 </a>
+<div style=font-style:italic;font-size:smaller>Autres langues: <a href=https://eloicoquoz.github.io/labveilletech/en/blog/digital-fan/ lang=en>English</a>
+</div>
 </div>
 </div>
 <div class="bg-blue-100 dark:bg-gray-900">
