deploy: 20849d5b15bd20bf1736042cd4db832b7aadae40

--- a/fr/index.html
+++ b/fr/index.html
@@ -51,8 +51,8 @@ LabVeilleTech - Eloi
 <main class=flex-1><section class="bg-blue-100 dark:bg-gray-900">
 <div class="container max-w-screen-lg mx-auto px-6 py-12 grid md:grid-cols-2 gap-4 lg:gap-16 items-center">
 <div>
-<h1 class="text-4xl font-bold mb-4">Salut! Je suis Eloi Coquoz</h1>
-<p class="font-light text-lg">Développeuse junior de 26 ans qui adore les jeux de société, le blogging et la peinture</p>
+<h1 class="text-4xl font-bold mb-4">Salut ! Je suis Eloi Coquoz</h1>
+<p class="font-light text-lg">Ingénieur des médias de formation, je suis passionné par sport et la technologie. J'ai voulu commencer une formation dans le domaine du sport mais je me suis blessé et j'ai du changer de voie. Mon but est de pouvoir lier ces deux domaines dans mon métier.</p>
 </div>
 <img class="rounded-lg shadow-sm" src=/labveilletech/picture.jpg alt="LabVeilleTech - Eloi">
 </div>
