--- a/fr/index.html
+++ b/fr/index.html
@@ -52,7 +52,7 @@ LabVeilleTech - Eloi
 <div class="container max-w-screen-lg mx-auto px-6 py-12 grid md:grid-cols-2 gap-4 lg:gap-16 items-center">
 <div>
 <h1 class="text-4xl font-bold mb-4">Salut ! Je suis Eloi Coquoz</h1>
-<p class="font-light text-lg">Ingénieur des médias de formation, je suis passionné par sport et la technologie. J'ai voulu commencer une formation dans le domaine du sport mais je me suis blessé et j'ai du changer de voie. Mon but est de pouvoir lier ces deux domaines dans mon métier.</p>
+<p class="font-light text-lg">Ingénieur des médias de formation, je suis passionné par le sport et la technologie. J'ai voulu commencer une formation dans le domaine du sport mais je me suis blessé et j'ai du changer de voie. Mon but est de pouvoir lier ces deux domaines dans mon métier.</p>
 </div>
 <img class="rounded-lg shadow-sm" src=/labveilletech/picture.jpg alt="LabVeilleTech - Eloi">
 </div>
