deploy: 4a635f33baaf68ac5b4293f7a2cd436ab2a254ff

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@ LabVeilleTech - Eloi
 </a>
 </div>
 <div class=p-2>
+<a href=https://eloicoquoz.github.io/labveilletech/blog/syst%C3%A8me-%C3%A9coute/>
+<div class=relative>
+<img src="https://www.archimag.com/sites/archimag.com/files/styles/article/public/web_articles/image/prestations_veille.jpg?itok=w6R6fnt6" alt="Système d'écoute mis en place dans le cours de labveilletech" class="rounded-lg shadow-sm w-full h-52 object-cover">
+<div class="absolute top-4 right-4 rounded shadow bg-white text-gray-900 dark:bg-gray-900 dark:text-white text-sm px-2 py-0.5">
+14. Jan 23
+</div>
+</div>
+<div class="my-2 text-xl font-semibold">Système d'écoute mis en place dans le cours de labveilletech</div>
+<div>Cet article explique le système d'écoute qui a été mis en place dans le cadre de la réalisation de mes articles de blog.</div>
+</a>
+</div>
+<div class=p-2>
 <a href=https://eloicoquoz.github.io/labveilletech/blog/digital-fan/>
 <div class=relative>
 <img src=https://media.lesechos.com/api/v1/images/view/639482de4e093c2b5f477e0a/1280x720/0702987585620-web-tete.jpg alt="Attirer un nouveau public et fidéliser les fans grâce au digital" class="rounded-lg shadow-sm w-full h-52 object-cover">
